--- a/index.html
+++ b/index.html
@@ -1,19 +1,10 @@
-<html lang="ru">
-    <head>
-        <meta charset="utf-8">
-            <title>Мои новогодние каникулы</title>
-    </head>
-        <body>
-            <header>
-                <div><h1>Как я провел новогодние каникулы</h1></div>
-            </header>
-            <main>
-                <article>
-                    <p  class="textik">
-                    В эти зимние каникулы я не выходил из дома и играл всю неделю в валорант.
-                    Также я готовился к экзаменам и делал проект.
-                    </p>
-                </article>
-            </main>
-</html>
-        </body>
+<body>
+    <div class = container>
+        <p>Авторизация</p>
+        <p class = log>Логин:</p>
+        <input>
+        <p class = log>Пароль:</p>
+        <input><br>
+        <button>Войти</button>
+    </div>
+</body>
