--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <body>
+    <font face="Segoe UI">
     <div class = container>
         <p>Авторизация</p>
-        <p class = log>Логин:</p>
+        <p class = log><Логин:</p>
         <input>
         <p class = log>Пароль:</p>
         <input><br>
