--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <font face="Segoe UI">
-    <div class = container>
-        <p>Авторизация</p>
-        <p class = log><Логин:</p>
-        <input>
-        <p class = log>Пароль:</p>
-        <input><br>
-        <button>Войти</button>
-    </div>
+    <body>
+        <font face="Segoe UI">
+        <div class = container>
+            <p>Авторизация</p>
+            <p class = log>Логин:</p>
+            <input id = "log">
+            <p class = log>Пароль:</p>
+            <input id = "pass"><br>
+            <button id = "btn">Войти</button>
+        </div>
+    </body>
 </body>
+</html>
+<script src="script.js"></script>
