--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
 <body>
     <body>
         <font face="Segoe UI">
-        <div class = container>
-            <p>Авторизация</p>
-            <p class = log>Логин:</p>
-            <input id = "log">
-            <p class = log>Пароль:</p>
-            <input id = "pass"><br>
-            <button id = "btn">Войти</button>
+        <div class = cab>
+            <h1><b>Личный кабинет</b></h1>
+        <div>    
+            <button class = lenta id = lenta>Лента</button>
+            <button class = new>Новое действие</button>
+        </div>
+        </div>
+            <div class = container>
+                <button class = leftbutton id = mainbtn>Главная</button>
+                <button class = leftbutton>Профиль</button>
+                <button class = leftbutton>Статистика</button>
+                <button class = leftbutton>Настройки</button>
         </div>
     </body>
 </body>
 </html>
-<script src="script.js"></script>
+<script src="scriptlenta.js"></script>
